// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should not add empty h2 with header set to true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1p7tz3i0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-disabled="false"
    >
      <div
        class="styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_captionStrong__m4c9owt style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with a header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1p7tz3i0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-disabled="false"
    >
      <h2
        class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_sentiment_neutral__m4c9owb style_variant_heading__m4c9ow11 style_undefined_compound_1__m4c9ow1b style_undefined_compound_65__m4c9ow33"
      >
        Header
      </h2>
      <div
        class="styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with complex header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__1p7tz3i0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-disabled="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%;"
      >
        <h2
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_heading__m4c9ow11 style_undefined_compound_0__m4c9ow1a"
        >
          header
        </h2>
        <button
          class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_medium__e1wcoef styles_variant_filled__e1wcoei styles_undefined_compound_6__e1wcoer"
          type="button"
        >
          Click
        </button>
      </div>
      <div
        class="styles__1p7tz3i1"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
            style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with CellWithCopybutton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 1fr; --_3mg8xe1: 1fr; --_3mg8xe2: 1fr; --_3mg8xe3: 1fr; --_3mg8xe4: 1fr; --_3mg8xe5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 styles__1s4jots7 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            <div
              class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
              style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
            >
              <p
                class="style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style__m4c9ow3e"
              >
                a content
              </p>
              <div
                aria-controls="_r_27_"
                aria-describedby="_r_27_"
                class="styles__w40vpo9"
                tabindex="0"
              >
                <button
                  aria-label="Copy"
                  class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CopyContentIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 1fr; --_3mg8xe1: 1fr; --_3mg8xe2: 1fr; --_3mg8xe3: 1fr; --_3mg8xe4: 1fr; --_3mg8xe5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 1fr; --_3mg8xe1: 1fr; --_3mg8xe2: 1fr; --_3mg8xe3: 1fr; --_3mg8xe4: 1fr; --_3mg8xe5: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 2fr 1fr; --_3mg8xe2: 2fr 1fr; --_3mg8xe3: 2fr 1fr; --_3mg8xe4: 2fr 1fr; --_3mg8xe5: 2fr 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: 1fr; --_3mg8xe1: 1fr; --_3mg8xe2: 1fr; --_3mg8xe3: 1fr; --_3mg8xe4: 1fr; --_3mg8xe5: 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh52p"
        style="--_3mg8xe0: repeat(3, 1fr); --_3mg8xe1: repeat(3, 1fr); --_3mg8xe2: repeat(3, 1fr); --_3mg8xe3: repeat(3, 1fr); --_3mg8xe4: repeat(3, 1fr); --_3mg8xe5: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%; --_4k0ekn2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
